--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="overlay">
         <header>
-            <a href="#"><img src="logo.svg" alt="netflix-logo" id="logo"></a>
+            <a href="#"><img src="/logo.svg" alt="netflix-logo" id="logo"></a>
             <a href="#" class="sign-in">Sign in</a>  
         </header>
 
